kubernetes/imap-prometheus/templates/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        backend:
          serviceName: thanos-querier
          servicePort: 10902
